# Hackathone-II-Phase-III-Todo-AI-Chatbot

./: .gitignore  HF_SYNC_WORKFLOW.md  README.md  RUNNING_INSTRUCTIONS.md  debug_chat_error.py  run_with_env.bat  simple_test.py  start_backend_with_env.bat  start_servers.bat  start_servers.ps1  test_application.py  test_application_simple.py  test_chat_error.py  test_services.py  updated_constitution_draft.md
backend/: .env.backup  .env.example  =2.8.0  =41.0.0  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SPACE_README.md  alembic.ini  app.py  auth_main.py  basic_main.py  check_tables.py  debug_env.py  fix_and_test.py  main.py  pyproject.toml  register_mcp_tools.py  requirements.txt  simple_main.py  space.yaml  start_backend_fixed.py  start_mcp_fixed.py  start_mcp_server.py  start_server.py  temp_main.py  test_add_task.py  test_ai_agent_flow.py  test_ai_operations.py  test_ai_operations_ascii.py  test_ai_simple.py  test_ai_with_ids.py  test_auth_flow.py  test_auth_flow_fixed.py  test_backend.py  test_correct_endpoints.py  test_db_connection.py  test_detailed.py  test_direct_complete.py  test_env.py  (+13 more)
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_conversation_and_message_tables.py
backend/src/api/: chat_endpoint.py
backend/src/auth/: dependencies.py  jwt_handler.py
backend/src/config/: settings.py
backend/src/core/: auth.py
backend/src/database/: connection.py  session.py
backend/src/mcp_server/: server.py
backend/src/models/: base.py  conversation.py  message.py  task.py  user.py
backend/src/schemas/: __init__.py  task_schemas.py
(+131 files in other folders)
